--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer-motion": "^6.2.7",
     "node-sass": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
