--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"framer-motion": "^11.3.18",
+		"jotai": "^2.9.1",
 		"node-sass": "^9.0.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
